--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <ul class="nav-links" style="font-weight: bold;">
             <li>
-                <a href="#">pricing</a>
+                <a href="#">Pricing</a>
             </li>
             <li>
-                <a href="#">product</a>
+                <a href="#">Product</a>
             </li>
             <li>
                 <a href="#">AboutUs</a>
